@@ -48,92 +48,7 @@ public class WordNet implements Serializable {
     public static final int ADJECTIVE = 3;
     public static final int ADVERB = 4;
     public static final int ADJECTIVE_SATELLITE = 5;
-    /**
-     * This array contains all of the regular expression strings that
-     * will be compiled to Pattern objects for use in the methods in
-     * this file.
-     */
-    public static final String[] regexPatternStrings =
-            {
-                    // 0: WordNet.processPointers()
-                    "^\\s*\\d\\d\\s\\S\\s\\d\\S\\s",
 
-                    // 1: WordNet.processPointers()
-                    "^([a-zA-Z0-9'._\\-]\\S*)\\s([0-9a-f])\\s",
-
-                    // 2: WordNet.processPointers()
-                    "^...\\s",
-
-                    // 3: WordNet.processPointers()
-                    "^(\\S\\S?)\\s([0-9]{8})\\s(.)\\s([0-9a-f]{4})\\s?",
-
-                    // 4: WordNet.processPointers()
-                    "^..\\s",
-
-                    // 5: WordNet.processPointers()
-                    "^\\+\\s(\\d\\d)\\s(\\d\\d)\\s?",
-
-                    // 6: WordNet.readNouns()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 7: WordNet.readNouns()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 8: WordNet.readNouns()
-                    "(\\S+)\\s+(\\S+)",
-
-                    // 9: WordNet.readNouns()
-                    "(\\S+)\\s+(\\S+)\\s+(\\S+)",
-
-                    // 10: WordNet.readVerbs()
-                    "^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 11: WordNet.readVerbs()
-                    "^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+)$",
-
-                    // 12: WordNet.readVerbs()
-                    "(\\S+)\\s+(\\S+).*",
-
-                    // 13: WordNet.readAdjectives()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 14: WordNet.readAdjectives()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 15: WordNet.readAdverbs()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$",
-
-                    // 16: WordNet.readAdverbs()
-                    "^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$",
-
-                    // 17: WordNet.readWordFrequencies()
-                    "^Word: ([^ ]+) Values: (.*)",
-
-                    // 18: WordNet.readSenseIndex()
-                    "([^%]+)%([^:]*):([^:]*):([^:]*)?:([^:]*)?:([^ ]*)? ([^ ]+)? ([^ ]+).*",
-
-                    // 19: WordNet.removePunctuation()
-                    "(\\w)\\'re",
-
-                    // 20: WordNet.removePunctuation()
-                    "(\\w)\\'m",
-
-                    // 21: WordNet.removePunctuation()
-                    "(\\w)n\\'t",
-
-                    // 22: WordNet.removePunctuation()
-                    "(\\w)\\'ll",
-
-                    // 23: WordNet.removePunctuation()
-                    "(\\w)\\'s",
-
-                    // 24: WordNet.removePunctuation()
-                    "(\\w)\\'d",
-
-                    // 25: WordNet.removePunctuation()
-                    "(\\w)\\'ve"
-            };
-    private static final Map<String, String> wnFilenames = new HashMap<>();
     public static boolean disable = false;
     public static boolean debug = false;
     public static WordNet wn = new WordNet();
@@ -146,8 +61,7 @@ public class WordNet implements Serializable {
      * This array contains all of the compiled Pattern objects that
      * will be used by methods in this file.
      */
-    public static Pattern[] regexPatterns = null;
-    public static List<String> VerbFrames = new ArrayList<String>(Arrays.asList("", // empty 0 index
+    public static List<String> VerbFrames = List.of("", // empty 0 index
             "Something ----s",                                      // 1
             "Somebody ----s",
             "It is ----ing",
@@ -182,7 +96,7 @@ public class WordNet implements Serializable {
             "Somebody ----s INFINITIVE",
             "Somebody ----s VERB-ing",
             "It ----s that CLAUSE",
-            "Something ----s INFINITIVE"));                         // 35
+            "Something ----s INFINITIVE");                         // 35
     public Map<String, Set<String>> nounSynsetHash = new HashMap<>();   // Words in root form are String keys,
     public Map<String, Set<String>> verbSynsetHash = new HashMap<>();   // String values are 8-digit synset lists.
     public Map<String, Set<String>> adjectiveSynsetHash = new HashMap<>();
@@ -397,8 +311,8 @@ public class WordNet implements Serializable {
 
         File serfile = new File(baseDir + File.separator + "wn.ser");
         Date saveDate = new Date(serfile.lastModified());
-        for (String f : wnFilenames.values()) {
-            File file = new File(f);
+        for (FileMaps f : FileMaps.values()) {
+            File file = new File(f.fileName);
             Date fileDate = new Date(file.lastModified());
             if (saveDate.compareTo(fileDate) < 0) {
                 return true;
@@ -475,8 +389,6 @@ public class WordNet implements Serializable {
         System.out.println("WordNet.loadFresh(): ");
         try {
             wn = new WordNet();
-            wn.makeFileMap();
-            wn.compileRegexPatterns();
 
             wn.readNouns();
             wn.readVerbs();
@@ -624,8 +536,7 @@ public class WordNet implements Serializable {
 
         String line = "01522276 35 v 04 wind 6 wrap 2 roll 0 twine 3 013 @ 01850315 v 0000 + 03150232 n 0303 + 07441619 n 0303 ^ 00435688 v 0301 ^ 00435688 v 0202 + 04586421 n 0101 + 10781984 n 0101 ! 01523654 v 0101 ~ 01522878 v 0000 ~ 01523105 v 0000 ~ 01523270 v 0000 ~ 01523401 v 0000 ~ 01523986 v 0000 01 + 21 00 | arrange or or coil around; \"roll your hair around your finger\"; \"Twine the thread around the spool\"; \"She wrapped her arms around the child\" &%Motion+";
         // 10: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-        WordNet.wn.compileRegexPatterns();
-        Matcher m = regexPatterns[10].matcher(line);
+        Matcher m = WordNetRegexPatterns.READ_VERBS_1.matcher(line);
         if (m.matches()) {
             //verbDocumentationHash.put(m.group(1),m.group(3));
             //addSUMOMapping(m.group(4),"2" + m.group(1));
@@ -709,40 +620,6 @@ public class WordNet implements Serializable {
         return multiWords;
     }
 
-    private void makeFileMap() {
-
-        wnFilenames.put("noun_mappings", "WordNetMappings30-noun.txt");
-        wnFilenames.put("verb_mappings", "WordNetMappings30-verb.txt");
-        wnFilenames.put("adj_mappings", "WordNetMappings30-adj.txt");
-        wnFilenames.put("adv_mappings", "WordNetMappings30-adv.txt");
-        wnFilenames.put("noun_exceptions", "noun.exc");
-        wnFilenames.put("verb_exceptions", "verb.exc");
-        wnFilenames.put("adj_exceptions", "adj.exc");
-        wnFilenames.put("adv_exceptions", "adv.exc");
-        wnFilenames.put("sense_indexes", "index.sense");
-        wnFilenames.put("word_frequencies", "wordFrequencies.txt");
-        wnFilenames.put("cntlist", "cntlist");
-        wnFilenames.put("stopwords", "stopwords.txt");
-        wnFilenames.put("messages", "messages.txt");
-    }
-
-    /**
-     * This method compiles all of the regular expression pattern
-     * strings in regexPatternStrings and puts the resulting compiled
-     * Pattern objects in the Pattern[] regexPatterns.
-     */
-    public void compileRegexPatterns() {
-
-        System.out.println("INFO in WordNet.compileRegexPatterns(): compiling patterns");
-        regexPatterns = new Pattern[regexPatternStrings.length];
-        for (int i = 0; i < regexPatternStrings.length; i++) {
-            regexPatterns[i] = Pattern.compile(regexPatternStrings[i]);
-            if (!(regexPatterns[i] instanceof Pattern))
-                System.out.println("ERROR in WordNet.compileRegexPatterns(): could not compile \""
-                        + regexPatternStrings[i] + "\"");
-        }
-    }
-
     /**
      * Returns the WordNet File object corresponding to key.
      *
@@ -750,14 +627,14 @@ public class WordNet implements Serializable {
      *            expression pattern used to obtain a WordNet file.
      * @return A File object
      */
-    public File getWnFile(String key, String override) {
+    public File getWnFile(FileMaps key, String override) {
 
         File theFile = null;
         try {
             if (override != null)
                 theFile = new File(override);
             else if ((key != null) && (baseDirFile != null))
-                theFile = new File(baseDirFile + File.separator + wnFilenames.get(key));
+                theFile = new File(baseDirFile + File.separator + key.fileName);
             if (theFile == null || !theFile.exists())
                 System.out.println("Error in WordNet.getWnFile(): no such file: " + theFile.getAbsolutePath());
         } catch (Exception ex) {
@@ -829,14 +706,14 @@ public class WordNet implements Serializable {
 
         //System.out.println("INFO in WordNet.processPointers(): " + pointers);
         // 0: p = Pattern.compile("^\\s*\\d\\d\\s\\S\\s\\d\\S\\s");
-        m = regexPatterns[0].matcher(pointers);
+        m = WordNetRegexPatterns.PROCESS_POINTERS_1.matcher(pointers);
         pointers = m.replaceFirst("");
         //System.out.println("INFO in WordNet.processPointers(): removed prefix: " + pointers);
 
         // Should be left with:
         // word  lex_id  [word  lex_id...]  p_cnt  [ptr...]  [frames...]
         // 1: p = Pattern.compile("^([a-zA-Z0-9'._\\-]\\S*)\\s([0-9a-f])\\s");
-        m = regexPatterns[1].matcher(pointers);
+        m = WordNetRegexPatterns.PROCESS_POINTERS_2.matcher(pointers);
         while (m.lookingAt()) {
             String word = m.group(1);
             //if (word.equals("roll"))
@@ -849,14 +726,14 @@ public class WordNet implements Serializable {
             //String count = m.group(2);
             addToSynsetsToWords(word, synset.substring(1), synset.substring(0, 1));
             pointers = m.replaceFirst("");
-            m = regexPatterns[1].matcher(pointers);
+            m = WordNetRegexPatterns.PROCESS_POINTERS_2.matcher(pointers);
         }
         //System.out.println("INFO in WordNet.processPointers(): removed words: " + pointers);
 
         // Should be left with:
         // p_cnt  [ptr...]  [frames...]
         // 2: p = Pattern.compile("^...\\s");
-        m = regexPatterns[2].matcher(pointers);
+        m = WordNetRegexPatterns.PROCESS_POINTERS_3.matcher(pointers);
         pointers = m.replaceFirst("");
 
         // Should be left with:
@@ -864,7 +741,7 @@ public class WordNet implements Serializable {
         // where ptr is
         // pointer_symbol  synset_offset  pos  source/target
         // 3: p = Pattern.compile("^(\\S\\S?)\\s([0-9]{8})\\s(.)\\s([0-9a-f]{4})\\s?");
-        m = regexPatterns[3].matcher(pointers);
+        m = WordNetRegexPatterns.PROCESS_POINTERS_4.matcher(pointers);
         while (m.lookingAt()) {
             String ptr = m.group(1);
             String targetSynset = m.group(2);
@@ -872,7 +749,7 @@ public class WordNet implements Serializable {
             //String sourceTarget = m.group(4);
             targetPOS = (Character.valueOf(WordNetUtilities.posLetterToNumber(targetPOS.charAt(0)))).toString();
             pointers = m.replaceFirst("");
-            m = regexPatterns[3].matcher(pointers);
+            m = WordNetRegexPatterns.PROCESS_POINTERS_4.matcher(pointers);
             ptr = WordNetUtilities.convertWordNetPointer(ptr);
             AVPair avp = new AVPair();
             avp.attribute = ptr;
@@ -895,10 +772,10 @@ public class WordNet implements Serializable {
             // f_cnt + f_num  w_num  [ +  f_num  w_num...]
             if (synset.charAt(0) == '2') {
                 // 4: p = Pattern.compile("^..\\s");
-                m = regexPatterns[4].matcher(pointers);
+                m = WordNetRegexPatterns.PROCESS_POINTERS_5.matcher(pointers);
                 pointers = m.replaceFirst("");
                 // 5: p = Pattern.compile("^\\+\\s(\\d\\d)\\s(\\d\\d)\\s?");
-                m = regexPatterns[5].matcher(pointers);
+                m = WordNetRegexPatterns.PROCESS_POINTERS_6.matcher(pointers);
                 while (m.lookingAt()) {
                     String frameNum = m.group(1);
                     String wordNum = m.group(2);
@@ -921,7 +798,7 @@ public class WordNet implements Serializable {
                         frames = verbFrames.get(key);
                     frames.add(frameNum);
                     pointers = m.replaceFirst("");
-                    m = regexPatterns[5].matcher(pointers);
+                    m = WordNetRegexPatterns.PROCESS_POINTERS_6.matcher(pointers);
                 }
             } else {
                 System.out.println("Error in WordNet.processPointers(): " +
@@ -993,7 +870,7 @@ public class WordNet implements Serializable {
         try {
             // synset_offset  lex_filenum  ss_type  w_cnt  word  lex_id  [word  lex_id...]  p_cnt  [ptr...]  [frames...]  |   gloss
             String line;
-            File nounFile = getWnFile("noun_mappings", null);
+            File nounFile = getWnFile(FileMaps.noun_mappings, null);
             if (nounFile == null) {
                 System.out.println("Error in WordNet.readNouns(): The noun mappings file does not exist in " + baseDir);
                 return;
@@ -1017,7 +894,7 @@ public class WordNet implements Serializable {
                     + " seconds to process " + nounFile.getCanonicalPath() +
                     " with " + lr.getLineNumber() + " lines");
             // System.out.println("INFO in WordNet.readNouns(): Reading WordNet noun exceptions");
-            nounFile = getWnFile("noun_exceptions", null);
+            nounFile = getWnFile(FileMaps.noun_exceptions, null);
             if (nounFile == null) {
                 System.out.println("ERROR in WordNet.readNouns(): "
                         + "The noun mapping exceptions file does not exist in " + baseDir);
@@ -1029,13 +906,13 @@ public class WordNet implements Serializable {
             lr = new LineNumberReader(r);
             while ((line = lr.readLine()) != null) {
                 // 8: p = Pattern.compile("(\\S+)\\s+(\\S+)");
-                m = regexPatterns[8].matcher(line);
+                m = WordNetRegexPatterns.READ_NOUNS_3.matcher(line);
                 if (m.matches()) {
                     exceptionNounHash.put(m.group(1), m.group(2));      // 1-plural, 2-singular
                     exceptionNounPluralHash.put(m.group(2), m.group(1));
                 } else {
                     // 9: p = Pattern.compile("(\\S+)\\s+(\\S+)\\s+(\\S+)");
-                    m = regexPatterns[9].matcher(line);
+                    m = WordNetRegexPatterns.READ_NOUNS_4.matcher(line);
                     if (m.matches()) {
                         exceptionNounHash.put(m.group(1), m.group(2));      // 1-plural, 2-singular 3-alternate singular
                         exceptionNounPluralHash.put(m.group(2), m.group(1));
@@ -1077,7 +954,7 @@ public class WordNet implements Serializable {
     protected boolean processNounLine(String line) {
 
         // 6: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-        m = regexPatterns[6].matcher(line);
+        m = WordNetRegexPatterns.READ_NOUNS_1.matcher(line);
         boolean anyAreNull = false;
         if (m.matches()) {
             for (int i = 1; i < 5; i++) {
@@ -1094,7 +971,7 @@ public class WordNet implements Serializable {
             }
         } else {
             // 7: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");  // no SUMO mapping
-            m = regexPatterns[7].matcher(line);
+            m = WordNetRegexPatterns.READ_NOUNS_2.matcher(line);
             if (m.matches()) {
                 nounDocumentationHash.put(m.group(1), m.group(3));
                 setMaxNounSynsetID(m.group(1));
@@ -1121,7 +998,7 @@ public class WordNet implements Serializable {
         LineNumberReader lr = null;
         try {
             String line;
-            File verbFile = getWnFile("verb_mappings", null);
+            File verbFile = getWnFile(FileMaps.verb_mappings, null);
             if (verbFile == null) {
                 System.out.println("Error in WordNet.readVerbs(): The verb mappings file does not exist in " + baseDir);
                 return;
@@ -1134,7 +1011,7 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 10: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[10].matcher(line);
+                m = WordNetRegexPatterns.READ_VERBS_1.matcher(line);
                 if (m.matches()) {
                     verbDocumentationHash.put(m.group(1), m.group(3));
                     setMaxVerbSynsetID(m.group(1));
@@ -1142,7 +1019,7 @@ public class WordNet implements Serializable {
                     processPointers("2" + m.group(1), m.group(2));
                 } else {
                     // 11: p = Pattern.compile("^([0-9]{8})([^\\|]+)\\|\\s([\\S\\s]+)$");   // no SUMO mapping
-                    m = regexPatterns[11].matcher(line);
+                    m = WordNetRegexPatterns.READ_VERBS_2.matcher(line);
                     if (m.matches()) {
                         verbDocumentationHash.put(m.group(1), m.group(3));
                         setMaxVerbSynsetID(m.group(1));
@@ -1162,7 +1039,7 @@ public class WordNet implements Serializable {
                     + " seconds to process " + verbFile.getCanonicalPath() +
                     " with " + lr.getLineNumber() + " lines");
             // System.out.println("INFO in WordNet.readVerbs(): Reading WordNet verb exceptions");
-            verbFile = getWnFile("verb_exceptions", null);
+            verbFile = getWnFile(FileMaps.verb_exceptions, null);
             if (verbFile == null) {
                 System.out.println("Error in WordNet.readVerbs(): The verb mapping exceptions file does not exist in " + baseDir);
                 return;
@@ -1172,7 +1049,7 @@ public class WordNet implements Serializable {
             lr = new LineNumberReader(r);
             while ((line = lr.readLine()) != null) {
                 // 12: p = Pattern.compile("(\\S+)\\s+(\\S+).*");
-                m = regexPatterns[12].matcher(line);  // TODO: Note we ignore more then one base form for a given tense
+                m = WordNetRegexPatterns.READ_VERBS_3.matcher(line);  // TODO: Note we ignore more then one base form for a given tense
                 if (m.matches()) {
                     exceptionVerbHash.put(m.group(1), m.group(2));          // 1-past/progressive, 2-root
                     if (m.group(1).endsWith("ing"))
@@ -1214,7 +1091,7 @@ public class WordNet implements Serializable {
         LineNumberReader lr = null;
         try {
             String line;
-            File adjFile = getWnFile("adj_mappings", null);
+            File adjFile = getWnFile(FileMaps.adj_mappings, null);
             if (adjFile == null) {
                 System.out.println("Error in WordNet.readAdjectives(): The adjective mappings file does not exist in " + baseDir);
                 return;
@@ -1227,14 +1104,14 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 13: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+?)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[13].matcher(line);
+                m = WordNetRegexPatterns.READ_ADJECTIVES_1.matcher(line);
                 if (m.matches()) {
                     adjectiveDocumentationHash.put(m.group(1), m.group(3));
                     addSUMOMapping(m.group(4), "3" + m.group(1));
                     processPointers("3" + m.group(1), m.group(2));
                 } else {
                     // 14: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");     // no SUMO mapping
-                    m = regexPatterns[14].matcher(line);
+                    m = WordNetRegexPatterns.READ_ADJECTIVES_2.matcher(line);
                     if (m.matches()) {
                         adjectiveDocumentationHash.put(m.group(1), m.group(3));
                         processPointers("3" + m.group(1), m.group(2));
@@ -1277,7 +1154,7 @@ public class WordNet implements Serializable {
         LineNumberReader lr = null;
         try {
             String line;
-            File advFile = getWnFile("adv_mappings", null);
+            File advFile = getWnFile(FileMaps.adv_mappings, null);
             if (advFile == null) {
                 System.out.println("Error in WordNet.readAdverbs(): The adverb mappings file does not exist in " + baseDir);
                 return;
@@ -1290,14 +1167,14 @@ public class WordNet implements Serializable {
                     System.out.print('.');
                 line = line.trim();
                 // 15: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)\\s(\\(?\\&\\%\\S+[\\S\\s]+)$");
-                m = regexPatterns[15].matcher(line);
+                m = WordNetRegexPatterns.READ_ADJECTIVES_3.matcher(line);
                 if (m.matches()) {
                     adverbDocumentationHash.put(m.group(1), m.group(3));
                     addSUMOMapping(m.group(4), "4" + m.group(1));
                     processPointers("4" + m.group(1), m.group(2));
                 } else {
                     // 16: p = Pattern.compile("^([0-9]{8})([\\S\\s]+)\\|\\s([\\S\\s]+)$");   // no SUMO mapping
-                    m = regexPatterns[16].matcher(line);
+                    m = WordNetRegexPatterns.READ_ADVERBS_1.matcher(line);
                     if (m.matches()) {
                         adverbDocumentationHash.put(m.group(1), m.group(3));
                         processPointers("4" + m.group(1), m.group(2));
@@ -1370,7 +1247,7 @@ public class WordNet implements Serializable {
         File wfFile = null;
         String canonicalPath = "";
         try {
-            wfFile = getWnFile("word_frequencies", null);
+            wfFile = getWnFile(FileMaps.word_frequencies, null);
             if (wfFile == null) {
                 System.out.println("Error in WordNet.readWordFrequencies(): The word frequencies file does not exist in " + baseDir);
                 return;
@@ -1383,7 +1260,7 @@ public class WordNet implements Serializable {
             while ((line = lr.readLine()) != null) {
                 line = line.trim();
                 // 17: Pattern p = Pattern.compile("^Word: ([^ ]+) Values: (.*)");
-                Matcher m = regexPatterns[17].matcher(line);
+                Matcher m = WordNetRegexPatterns.READ_WORD_FREQUENCIES.matcher(line);
                 if (m.matches()) {
                     String key = m.group(1);
                     String values = m.group(2);
@@ -1436,7 +1313,7 @@ public class WordNet implements Serializable {
         File swFile = null;
         String canonicalPath = "";
         try {
-            swFile = getWnFile("stopwords", null);
+            swFile = getWnFile(FileMaps.stopwords, null);
             if (swFile == null) {
                 System.out.println("Error in WordNet.readStopWords(): The stopwords file does not exist in " + baseDir);
                 return;
@@ -1476,7 +1353,7 @@ public class WordNet implements Serializable {
         File siFile = null;
         String canonicalPath = "";
         try {
-            siFile = getWnFile("sense_indexes", filename);
+            siFile = getWnFile(FileMaps.sense_indexes, filename);
             if (siFile == null) {
                 System.out.println("Error in WordNet.readSenseIndex(): The sense indexes file does not exist in " + baseDir);
                 return;
@@ -1490,7 +1367,7 @@ public class WordNet implements Serializable {
             String line;
             while ((line = lr.readLine()) != null) {
                 // 18: Pattern p = Pattern.compile("([^%]+)%([^:]*):([^:]*):([^:]*):([^:]*):([^ ]*) ([^ ]+) ([^ ]+) .*");
-                m = regexPatterns[18].matcher(line);
+                m = WordNetRegexPatterns.READ_SENSE_INDEX.matcher(line);
                 if (m.matches()) {
                     String word = m.group(1);
                     String pos = m.group(2);  // WN's ss_type
@@ -1557,7 +1434,7 @@ public class WordNet implements Serializable {
         File siFile = null;
         String canonicalPath = "";
         try {
-            siFile = getWnFile("cntlist", null);
+            siFile = getWnFile(FileMaps.cntlist, null);
             if (siFile == null) {
                 System.out.println("Error in WordNet.readSenseCount(): The sense count file does not exist in " +
                         baseDir + File.separator + "cntlist");
